// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileInput Component FileInput handle add file successfully through input 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="gds-file-input-container"
      >
        <div
          class="droparea"
        >
          <label
            class="label"
          >
            Click or drag file to upload
            <input
              class="input"
              data-testid="TEST-ID"
              multiple=""
              type="file"
              value=""
            />
          </label>
        </div>
        <div
          class="gallery"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="gds-file-input-container"
    >
      <div
        class="droparea"
      >
        <label
          class="label"
        >
          Click or drag file to upload
          <input
            class="input"
            data-testid="TEST-ID"
            multiple=""
            type="file"
            value=""
          />
        </label>
      </div>
      <div
        class="gallery"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FileInput Component FileInput handle add file successfully through input 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="gds-file-input-container"
      >
        <div
          class="droparea"
        >
          <label
            class="label"
          >
            Click or drag file to upload
            <input
              class="input"
              data-testid="TEST-ID"
              multiple=""
              type="file"
              value=""
            />
          </label>
        </div>
        <div
          class="gallery"
        >
          <div
            class="item-container"
          >
            <div
              class="left"
            >
              <div
                class="paperclip-icon"
              >
                <i
                  class="icon"
                  icon="fal,paperclip"
                />
              </div>
              <div
                class="name downloadable"
                data-testid="TEST-ID-download"
              >
                hello.png
              </div>
            </div>
            <div
              class="right"
            >
              <progress
                class="progress"
                max="100"
                value="50"
              />
              <div
                class="delete-icon"
              >
                <i
                  class="icon"
                  icon="fal,spinner"
                  spin="true"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="gds-file-input-container"
    >
      <div
        class="droparea"
      >
        <label
          class="label"
        >
          Click or drag file to upload
          <input
            class="input"
            data-testid="TEST-ID"
            multiple=""
            type="file"
            value=""
          />
        </label>
      </div>
      <div
        class="gallery"
      >
        <div
          class="item-container"
        >
          <div
            class="left"
          >
            <div
              class="paperclip-icon"
            >
              <i
                class="icon"
                icon="fal,paperclip"
              />
            </div>
            <div
              class="name downloadable"
              data-testid="TEST-ID-download"
            >
              hello.png
            </div>
          </div>
          <div
            class="right"
          >
            <progress
              class="progress"
              max="100"
              value="50"
            />
            <div
              class="delete-icon"
            >
              <i
                class="icon"
                icon="fal,spinner"
                spin="true"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FileInput Component FileInput handle add file successfully through input 3`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="gds-file-input-container"
      >
        <div
          class="droparea"
        >
          <label
            class="label"
          >
            Click or drag file to upload
            <input
              class="input"
              data-testid="TEST-ID"
              multiple=""
              type="file"
              value=""
            />
          </label>
        </div>
        <div
          class="gallery"
        >
          <div
            class="item-container"
          >
            <div
              class="left"
            >
              <div
                class="paperclip-icon"
              >
                <i
                  class="icon"
                  icon="fal,paperclip"
                />
              </div>
              <div
                class="name downloadable"
                data-testid="TEST-ID-download"
              >
                hello.png
              </div>
            </div>
            <div
              class="right"
            >
              <div
                class="delete-icon"
                data-testid="TEST-ID-delete"
              >
                <i
                  class="icon"
                  icon="fal,trash-alt"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="gds-file-input-container"
    >
      <div
        class="droparea"
      >
        <label
          class="label"
        >
          Click or drag file to upload
          <input
            class="input"
            data-testid="TEST-ID"
            multiple=""
            type="file"
            value=""
          />
        </label>
      </div>
      <div
        class="gallery"
      >
        <div
          class="item-container"
        >
          <div
            class="left"
          >
            <div
              class="paperclip-icon"
            >
              <i
                class="icon"
                icon="fal,paperclip"
              />
            </div>
            <div
              class="name downloadable"
              data-testid="TEST-ID-download"
            >
              hello.png
            </div>
          </div>
          <div
            class="right"
          >
            <div
              class="delete-icon"
              data-testid="TEST-ID-delete"
            >
              <i
                class="icon"
                icon="fal,trash-alt"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FileInput Component FileInput handle add file unsucessfully through input 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="gds-file-input-container"
      >
        <div
          class="droparea"
        >
          <label
            class="label"
          >
            Click or drag file to upload
            <input
              class="input"
              data-testid="TEST-ID"
              multiple=""
              type="file"
              value=""
            />
          </label>
        </div>
        <div
          class="gallery"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="gds-file-input-container"
    >
      <div
        class="droparea"
      >
        <label
          class="label"
        >
          Click or drag file to upload
          <input
            class="input"
            data-testid="TEST-ID"
            multiple=""
            type="file"
            value=""
          />
        </label>
      </div>
      <div
        class="gallery"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FileInput Component FileInput handle add file unsucessfully through input 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="gds-file-input-container"
      >
        <div
          class="droparea"
        >
          <label
            class="label"
          >
            Click or drag file to upload
            <input
              class="input"
              data-testid="TEST-ID"
              multiple=""
              type="file"
              value=""
            />
          </label>
        </div>
        <div
          class="gallery"
        >
          <span
            style="display: inline-block; width: 100%; overflow: hidden;"
          >
            <div
              class="item-container error"
            >
              <div
                class="left"
              >
                <div
                  class="paperclip-icon"
                >
                  <i
                    class="icon"
                    icon="fal,exclamation-triangle"
                  />
                </div>
                <div
                  class="name"
                  data-testid="TEST-ID-download"
                >
                  hello.png
                </div>
              </div>
              <div
                class="right"
              >
                <div
                  class="delete-icon"
                  data-testid="TEST-ID-delete"
                >
                  <i
                    class="icon"
                    icon="fal,trash-alt"
                  />
                </div>
              </div>
            </div>
          </span>
          <div>
            <div
              class="gds-tooltip top"
              style="left: -99999px; top: -99999px; opacity: 0;"
            >
              <div
                class="tooltip-arrow"
              />
              <div
                class="tooltip-label"
              >
                Internal Error
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      id="root-portal-id"
    >
      <div />
    </div>
  </body>,
  "container": <div>
    <div
      class="gds-file-input-container"
    >
      <div
        class="droparea"
      >
        <label
          class="label"
        >
          Click or drag file to upload
          <input
            class="input"
            data-testid="TEST-ID"
            multiple=""
            type="file"
            value=""
          />
        </label>
      </div>
      <div
        class="gallery"
      >
        <span
          style="display: inline-block; width: 100%; overflow: hidden;"
        >
          <div
            class="item-container error"
          >
            <div
              class="left"
            >
              <div
                class="paperclip-icon"
              >
                <i
                  class="icon"
                  icon="fal,exclamation-triangle"
                />
              </div>
              <div
                class="name"
                data-testid="TEST-ID-download"
              >
                hello.png
              </div>
            </div>
            <div
              class="right"
            >
              <div
                class="delete-icon"
                data-testid="TEST-ID-delete"
              >
                <i
                  class="icon"
                  icon="fal,trash-alt"
                />
              </div>
            </div>
          </div>
        </span>
        <div>
          <div
            class="gds-tooltip top"
            style="left: -99999px; top: -99999px; opacity: 0;"
          >
            <div
              class="tooltip-arrow"
            />
            <div
              class="tooltip-label"
            >
              Internal Error
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FileInput Component FileInput handle add file with timeout through input 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="gds-file-input-container"
      >
        <div
          class="droparea"
        >
          <label
            class="label"
          >
            Click or drag file to upload
            <input
              class="input"
              data-testid="TEST-ID"
              multiple=""
              type="file"
              value=""
            />
          </label>
        </div>
        <div
          class="gallery"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="gds-file-input-container"
    >
      <div
        class="droparea"
      >
        <label
          class="label"
        >
          Click or drag file to upload
          <input
            class="input"
            data-testid="TEST-ID"
            multiple=""
            type="file"
            value=""
          />
        </label>
      </div>
      <div
        class="gallery"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FileInput Component FileInput handle add file with timeout through input 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="gds-file-input-container"
      >
        <div
          class="droparea"
        >
          <label
            class="label"
          >
            Click or drag file to upload
            <input
              class="input"
              data-testid="TEST-ID"
              multiple=""
              type="file"
              value=""
            />
          </label>
        </div>
        <div
          class="gallery"
        >
          <span
            style="display: inline-block; width: 100%; overflow: hidden;"
          >
            <div
              class="item-container error"
            >
              <div
                class="left"
              >
                <div
                  class="paperclip-icon"
                >
                  <i
                    class="icon"
                    icon="fal,exclamation-triangle"
                  />
                </div>
                <div
                  class="name"
                  data-testid="TEST-ID-download"
                >
                  hello.png
                </div>
              </div>
              <div
                class="right"
              >
                <div
                  class="delete-icon"
                  data-testid="TEST-ID-delete"
                >
                  <i
                    class="icon"
                    icon="fal,trash-alt"
                  />
                </div>
              </div>
            </div>
          </span>
          <div>
            <div
              class="gds-tooltip top"
              style="left: -99999px; top: -99999px; opacity: 0;"
            >
              <div
                class="tooltip-arrow"
              />
              <div
                class="tooltip-label"
              >
                Timeout
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      id="root-portal-id"
    >
      <div />
    </div>
  </body>,
  "container": <div>
    <div
      class="gds-file-input-container"
    >
      <div
        class="droparea"
      >
        <label
          class="label"
        >
          Click or drag file to upload
          <input
            class="input"
            data-testid="TEST-ID"
            multiple=""
            type="file"
            value=""
          />
        </label>
      </div>
      <div
        class="gallery"
      >
        <span
          style="display: inline-block; width: 100%; overflow: hidden;"
        >
          <div
            class="item-container error"
          >
            <div
              class="left"
            >
              <div
                class="paperclip-icon"
              >
                <i
                  class="icon"
                  icon="fal,exclamation-triangle"
                />
              </div>
              <div
                class="name"
                data-testid="TEST-ID-download"
              >
                hello.png
              </div>
            </div>
            <div
              class="right"
            >
              <div
                class="delete-icon"
                data-testid="TEST-ID-delete"
              >
                <i
                  class="icon"
                  icon="fal,trash-alt"
                />
              </div>
            </div>
          </div>
        </span>
        <div>
          <div
            class="gds-tooltip top"
            style="left: -99999px; top: -99999px; opacity: 0;"
          >
            <div
              class="tooltip-arrow"
            />
            <div
              class="tooltip-label"
            >
              Timeout
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FileInput Component FileInput handle drag event for highlight 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="gds-file-input-container"
      >
        <div
          class="droparea"
        >
          <label
            class="label"
          >
            Click or drag file to upload
            <input
              class="input"
              data-testid="TEST-ID"
              multiple=""
              type="file"
              value=""
            />
          </label>
        </div>
        <div
          class="gallery"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="gds-file-input-container"
    >
      <div
        class="droparea"
      >
        <label
          class="label"
        >
          Click or drag file to upload
          <input
            class="input"
            data-testid="TEST-ID"
            multiple=""
            type="file"
            value=""
          />
        </label>
      </div>
      <div
        class="gallery"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FileInput Component FileInput handle drag event for highlight 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="gds-file-input-container"
      >
        <div
          class="droparea"
        >
          <label
            class="label"
          >
            Click or drag file to upload
            <input
              class="input highlight"
              data-testid="TEST-ID"
              multiple=""
              type="file"
              value=""
            />
          </label>
        </div>
        <div
          class="gallery"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="gds-file-input-container"
    >
      <div
        class="droparea"
      >
        <label
          class="label"
        >
          Click or drag file to upload
          <input
            class="input highlight"
            data-testid="TEST-ID"
            multiple=""
            type="file"
            value=""
          />
        </label>
      </div>
      <div
        class="gallery"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FileInput Component FileInput handle drag event for highlight 3`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="gds-file-input-container"
      >
        <div
          class="droparea"
        >
          <label
            class="label"
          >
            Click or drag file to upload
            <input
              class="input"
              data-testid="TEST-ID"
              multiple=""
              type="file"
              value=""
            />
          </label>
        </div>
        <div
          class="gallery"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="gds-file-input-container"
    >
      <div
        class="droparea"
      >
        <label
          class="label"
        >
          Click or drag file to upload
          <input
            class="input"
            data-testid="TEST-ID"
            multiple=""
            type="file"
            value=""
          />
        </label>
      </div>
      <div
        class="gallery"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FileInput Component FileInput handle drop of file 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="gds-file-input-container"
      >
        <div
          class="droparea"
        >
          <label
            class="label"
          >
            Click or drag file to upload
            <input
              class="input"
              data-testid="TEST-ID"
              multiple=""
              type="file"
              value=""
            />
          </label>
        </div>
        <div
          class="gallery"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="gds-file-input-container"
    >
      <div
        class="droparea"
      >
        <label
          class="label"
        >
          Click or drag file to upload
          <input
            class="input"
            data-testid="TEST-ID"
            multiple=""
            type="file"
            value=""
          />
        </label>
      </div>
      <div
        class="gallery"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FileInput Component FileInput handle drop of file 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="gds-file-input-container"
      >
        <div
          class="droparea"
        >
          <label
            class="label"
          >
            Click or drag file to upload
            <input
              class="input"
              data-testid="TEST-ID"
              multiple=""
              type="file"
              value=""
            />
          </label>
        </div>
        <div
          class="gallery"
        >
          <div
            class="item-container"
          >
            <div
              class="left"
            >
              <div
                class="paperclip-icon"
              >
                <i
                  class="icon"
                  icon="fal,paperclip"
                />
              </div>
              <div
                class="name downloadable"
                data-testid="TEST-ID-download"
              >
                file1.pdf
              </div>
            </div>
            <div
              class="right"
            >
              <div
                class="delete-icon"
              >
                <i
                  class="icon"
                  icon="fal,spinner"
                  spin="true"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="gds-file-input-container"
    >
      <div
        class="droparea"
      >
        <label
          class="label"
        >
          Click or drag file to upload
          <input
            class="input"
            data-testid="TEST-ID"
            multiple=""
            type="file"
            value=""
          />
        </label>
      </div>
      <div
        class="gallery"
      >
        <div
          class="item-container"
        >
          <div
            class="left"
          >
            <div
              class="paperclip-icon"
            >
              <i
                class="icon"
                icon="fal,paperclip"
              />
            </div>
            <div
              class="name downloadable"
              data-testid="TEST-ID-download"
            >
              file1.pdf
            </div>
          </div>
          <div
            class="right"
          >
            <div
              class="delete-icon"
            >
              <i
                class="icon"
                icon="fal,spinner"
                spin="true"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FileInput Component FileInput handles downlaod and delete of a file 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="gds-file-input-container"
      >
        <div
          class="droparea"
        >
          <label
            class="label"
          >
            Click or drag file to upload
            <input
              class="input"
              data-testid="TEST-ID"
              type="file"
              value=""
            />
          </label>
        </div>
        <div
          class="gallery"
        >
          <div
            class="item-container"
          >
            <div
              class="left"
            >
              <div
                class="paperclip-icon"
              >
                <i
                  class="icon"
                  icon="fal,paperclip"
                />
              </div>
              <div
                class="name downloadable"
                data-testid="TEST-ID-download"
              >
                AME
              </div>
            </div>
            <div
              class="right"
            >
              <div
                class="delete-icon"
                data-testid="TEST-ID-delete"
              >
                <i
                  class="icon"
                  icon="fal,trash-alt"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="gds-file-input-container"
    >
      <div
        class="droparea"
      >
        <label
          class="label"
        >
          Click or drag file to upload
          <input
            class="input"
            data-testid="TEST-ID"
            type="file"
            value=""
          />
        </label>
      </div>
      <div
        class="gallery"
      >
        <div
          class="item-container"
        >
          <div
            class="left"
          >
            <div
              class="paperclip-icon"
            >
              <i
                class="icon"
                icon="fal,paperclip"
              />
            </div>
            <div
              class="name downloadable"
              data-testid="TEST-ID-download"
            >
              AME
            </div>
          </div>
          <div
            class="right"
          >
            <div
              class="delete-icon"
              data-testid="TEST-ID-delete"
            >
              <i
                class="icon"
                icon="fal,trash-alt"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FileInput Component FileInput renders 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="gds-file-input-container"
      >
        <div
          class="droparea"
        >
          <label
            class="label"
          >
            Click or drag file to upload
            <input
              class="input"
              multiple=""
              type="file"
              value=""
            />
          </label>
        </div>
        <div
          class="gallery"
        >
          <div
            class="item-container"
          >
            <div
              class="left"
            >
              <div
                class="paperclip-icon"
              >
                <i
                  class="icon"
                  icon="fal,paperclip"
                />
              </div>
              <div
                class="name downloadable"
              >
                NAME
              </div>
            </div>
            <div
              class="right"
            >
              <div
                class="delete-icon"
              >
                <i
                  class="icon"
                  icon="fal,trash-alt"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="gds-file-input-container"
    >
      <div
        class="droparea"
      >
        <label
          class="label"
        >
          Click or drag file to upload
          <input
            class="input"
            multiple=""
            type="file"
            value=""
          />
        </label>
      </div>
      <div
        class="gallery"
      >
        <div
          class="item-container"
        >
          <div
            class="left"
          >
            <div
              class="paperclip-icon"
            >
              <i
                class="icon"
                icon="fal,paperclip"
              />
            </div>
            <div
              class="name downloadable"
            >
              NAME
            </div>
          </div>
          <div
            class="right"
          >
            <div
              class="delete-icon"
            >
              <i
                class="icon"
                icon="fal,trash-alt"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
